--- a/style.css
+++ b/style.css
@@ -57,16 +57,34 @@
 	grid-area: 1/1;
 }
 
+.item {
+	width: var(--TILE_SIZE);
+	aspect-ratio: 1/1;
+	background-size: 100%;
+	image-rendering: pixelated;
+	position: absolute;
+}
+
 #characters {
 	grid-area: 1/1;
 }
 
-#player {
+.npc {
 	width: 22px;
 	aspect-ratio: 16/20;
 	background-size: 400% 400%;
-	background-image: url("images/Characters/Character 5.png");
 	image-rendering: pixelated;
+	position: absolute;
+	z-index: 1;
+}
+
+#player {
+	background-image: url("images/Characters/5.png");
+	width: 22px;
+	aspect-ratio: 16/20;
+	background-size: 400% 400%;
+	image-rendering: pixelated;
+	z-index: 2;
 }
 
 #player.animate {
